2006-08-04  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Cron.h, EvManager.h, NetTransport.h: changes in 
	thread entry function.
	
	* Cron.cc, EvManager.cc, NetTransport.cc: ditto.

2006-07-20  Petr Ovtchenkov  <ptr@island.corbina.net>

	* crc.h: use platform-independent uint32_t for CRC types.

	* NetTransport.cc: use platform-independent uint32_t for
	network communication.

	* Cron.h, EvSession.h, Event.h: ditto

	* EvPack.cc: ditto

2006-07-19  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h: libstdc++ v3, timestamp 20050519 (gcc 3.4.4)
	has __type_traits, while libstdc++ v3, timestamp 20050921
	(gcc 4.0.2) not; I use boost's staff instead.

2006-07-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.cc: add guard for dispatch loop stop flag.

	* EvManager.h: idem

	* NetTransport.cc: socket manager already provide connection
	loop; socket in NetTransport should be shutdown to break down
	through infinite read.

	* NetTransport.h: prepare NetTransport to current sockmgr.

	* _EventHandler.cc: add guard for Init, where EvManager and Names
	started.

	* libstem (Repository): library version 4.1.0.

2006-06-28  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Makefile: remove -ISTLPORT, may be build without one; but
	boost is required in this case.

	* Cron.cc: check LONG_LONG in libstdc++ too

	* Event.h: define __type_traits (from STLport) in case of
	build with libstdc++.

	* EventHandler.h: use ext/functional and namespace __gnu_cxx
	for some functors when compile with libstdc++.

	* SessionMgr.h: ditto

2006-05-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EventHandler.h: explicitly add stdexcept header.

2006-02-27  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.cc, NetTransport.cc, _EventHandler.cc: rename nsaddr to
	ns_addr to fix conflict with define in resolv.h for backword
	compatibility.

	* Event.h: ditto.

	* libstem (Repository): library version 4.0.1.

2005-06-28  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>
